[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/tileset.png" type="Texture" id=1]
[ext_resource path="res://actor/npc/npc.gd" type="Script" id=2]
[ext_resource path="res://environ/dialog/dialog.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 64, 176, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 80, 176, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 16.0

[node name="npc" type="Node2D"]
script = ExtResource( 2 )

[node name="anim" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 3 )
animation = "idle"
frame = 1
playing = true

[node name="detect" type="Area2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="detect"]
shape = SubResource( 4 )

[node name="dialog" parent="detect" instance=ExtResource( 3 )]
visible = false
position = Vector2( -150, -100 )
z_index = 10

[node name="timer" type="Timer" parent="detect"]
process_mode = 0

[connection signal="body_entered" from="detect" to="." method="_on_detect_body_entered"]
[connection signal="body_exited" from="detect" to="." method="_on_detect_body_exited"]
[connection signal="timeout" from="detect/timer" to="." method="_on_timer_timeout"]
